@@ -1178,6 +1178,7 @@ setVariables()
     dfe->addEnumText(_("OLC Plus"), OLC_Plus);
     dfe->addEnumText(_("XContest"), OLC_XContest);
     dfe->addEnumText(_("DHV-XC"), OLC_DHVXC);
+    dfe->addEnumText(_("SIS-AT"), OLC_SISAT);
     dfe->Set(settings_computer.contest);
     wp->RefreshDisplay();
   }
