@@ -18,7 +18,8 @@ ContestManager::ContestManager(const Contests _contest,
   olc_league(trace_sprint, _handicap),
   olc_plus(trace_full, _handicap),
   olc_xcontest(trace_full, _handicap, false),
-  olc_dhvxc(trace_full, _handicap, true)
+  olc_dhvxc(trace_full, _handicap, true),
+  olc_sisat(trace_full, _handicap)
 {
   reset();
 }
@@ -82,6 +83,9 @@ ContestManager::update_idle()
   case OLC_DHVXC:
     retval = run_contest(olc_dhvxc, result, solution);
     break;
+  case OLC_SISAT:
+    retval = run_contest(olc_sisat, result, solution);
+    break;
   };
 
   return retval;
@@ -98,6 +102,7 @@ ContestManager::reset()
   olc_plus.reset();
   olc_xcontest.reset();
   olc_dhvxc.reset();
+  olc_sisat.reset();
 }
 
 const TracePointVector& 
